fix: trim and normalize whitespace in multiple components

--- a/src/app/main-pages/shared/task-create-form/task-create-form.component.scss
+++ b/src/app/main-pages/shared/task-create-form/task-create-form.component.scss
@@ -277,7 +277,7 @@ input.ng-invalid.ng-touched {
   margin-top: 4px;
   color: $error-muted;
   font-size: 16px;
-  font-weight: 700;
+  font-weight: 400;
   position: absolute;
 }
 
@@ -285,7 +285,7 @@ input.ng-invalid.ng-touched {
   margin-top: 4px;
   color: $error-muted;
   font-size: 16px;
-  font-weight: 300;
+  font-weight: 400;
 }
 
 .error-border {
